# R2H.AI-Magican

./: .audit_code_files.txt  .audit_files.txt  .gitignore  CONTRIBUTING.md  README.md  build.gradle.kts  desktop.ini  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.android/: analytics.settings  debug.keystore
.github/: CODEOWNERS
.github/workflows/: ci.yml  orchestrator-gate.yml  release-readiness.yml
ai/orchestrator/: build.gradle.kts
ai/runtime/: build.gradle.kts
ai/runtime/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle.kts
core/audio/: build.gradle.kts
core/design/: build.gradle.kts
core/haptics/: build.gradle.kts
core/sensors/: build.gradle.kts
docs/: ACCESSIBILITY_PHASE_L5.md  AI_UNAVAILABLE_UX_STRATEGY.md  GUARDRAILS_MIGRATION_GUIDE.md  PHASE_L1_IMPLEMENTATION_SUMMARY.md  PHASE_L2_IMPLEMENTATION_SUMMARY.md  UI_PERFORMANCE_PHASE_L4.md  UPGRADE_ENHANCEMENT_ROADMAP_2026.md  UX_THEME_FEATURE_UPGRADE.md
docs/governance/: AI_RUNTIME_GOVERNANCE.md  ARCHITECTURE_BOUNDARIES.md  ARTIFACT_HASH_POLICY.md  BRANCH_PROTECTION_REQUIRED_CHECKS.md  RELEASE_GATES.md  REPRODUCIBLE_BUILD_POLICY.md  SECURITY_BASELINE.md
docs/security/: THREAT_MODEL_TEMPLATE.md
features/birthchart/: build.gradle.kts
features/compatibility/: build.gradle.kts
features/dreams/: build.gradle.kts
features/horoscope/: build.gradle.kts
features/palm/: build.gradle.kts
features/tarot/: build.gradle.kts
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
scripts/: hash-artifacts.ps1
(+104 files in other folders)
